<resources>
    <string name="app_name">MyCal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Pengaturan</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="height">Tinggi</string>
    <string name="activity_level">Tingkat Aktivitas</string>
    <string name="weight">Berat Badan Sekarang</string>
    <string name="target_weight">Target Berat Badan</string>
    <string name="mesurment">Pengukuran</string>
    <string name="cm">cm</string>
    <string name="feet_inches">kaki and inch</string>
    <string name="kg">kg</string>
    <string name="pound">pound</string>


    <string-array name="array_mesurments">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>

    <string name="day">Hari</string>
    <string name="month">Bulan</string>
    <string name="year">Tahun</string>

    <string-array name="array_months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="blank"> </string>


    <string-array name="array_activity_levels">
        <item>Sedikit atau tidak melakukan olahraga</item>
        <item>Olahraga Ringan (1–3 hari/minggu)</item>
        <item>Olahraga Sedang (3–5 hari/minggu)</item>
        <item>Olahraga Berat (6–7 hari/minggu)</item>
        <item>Olahraga Sangat Berat (2x sehari)</item>
    </string-array>

    <string name="i_want_to">Saya ingin</string>
    <string name="i_want">Saya ingin</string>
    <string name="sign_up">Sign up</string>

    <string name="weekly_goal">Target dalam seminggu</string>


    <string-array name="array_weekly_goals">
        <item>Mengurangi berat badan</item>
        <item>Menambah berat badan</item>
    </string-array>

    <string-array name="array_weekly_goals_kg">
        <item>0.5</item>
        <item>1</item>
        <item>1.5</item>
    </string-array>


    <string name="kg_each_week">kg/minggu</string>
    <string name="pounds_each_week">pounds/minggu</string>

    <string name="lets_go">Lets go!</string>

    <string name="home">Home</string>
    <string name="profile">Profil</string>
    <string name="goal">Target</string>
    <string name="categories">Kategori Makanan</string>
    <string name="food">Daftar Makanan</string>
    <string name="riwayat">Riwayat</string>

    <string name="add">Tambah</string>
    <string name="delete">Hapus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="name">Nama</string>
    <string name="parent">Parent</string>
    <string name="save">Simpan</string>
    <string name="are_you_sure_you_want_to_delete">Apakah anda yakin ingin menghapus ini?</string>
    <string name="cancel">Batal</string>
    <string name="calories_table">Detail Nutrisi</string>
    <string name="energy">Kalori</string>
    <string name="proteins">Protein</string>
    <string name="carbs">Karbohidrat</string>
    <string name="fat">Lemak</string>
    <string name="per_hundred_gran">Per 100 gram</string>
    <string name="per_meal">Per makanan</string>
    <string name="manufactor">Manufaktur</string>
    <string name="about">Tentang</string>
    <string name="description">Deskripsi</string>
    <string name="general">General</string>
    <string name="serving">Takaran Saji</string>
    <string name="number">Number</string>
    <string name="word">Word</string>
    <string name="barcode">Barcode</string>
    <string name="category">Kategori</string>
    <string name="main">Kategori Utama</string>
    <string name="sub">Sub Kategori</string>
    <string name="current_status">Current status</string>
    <string name="target">Target</string>
    <string name="my_goal">Tujuanku</string>
    <string name="status">Target</string>
    <string name="method">Metode</string>
    <string name="bmr">BMR</string>
    <string name="numbers">Kebutuhan Nutrisi</string>
    <string name="diet">Diet</string>
    <string name="with_activity">Dengan aktivitas</string>
    <string name="with_activity_and_diet">Dengan aktivitas dan diet</string>

    <string name="if_you_want_to_keep_your_weight">Jika ingin menjaga berat badan</string>
    <string name="if_you_want_to_loose_weight">Jika ingin menurunkan berat badan</string>
    <string name="if_you_want_to">Jika ingin</string>
    <string name="keep_your_weight">Menjaga berta badan</string>
    <string name="loose_x_kg_week_with_out_exercising">Loose x kg each week with out exercising</string>
    <string name="without_activity">Tanpa Aktivitas</string>
    <string name="advanced">Lihat lebih lengkap</string>
    <string name="with_activity_">Dengan aktivitas</string>
    <string name="edit">Edit</string>

    <string name="password">Password</string>
    <string name="alias">Alias</string>
    <string name="activity">Aktivitas</string>
    <string name="breakfast">Sarapan</string>
    <string name="lunch">Makan Siang</string>
    <string name="before_training">Sebelum Olahraga</string>
    <string name="after_training">Sesudah Olahraga</string>
    <string name="dinner">Makan Malam</string>
    <string name="snacks">Snack</string>
    <string name="supper">Supper</string>

    <string name="portion_size">Besar porsi</string>
    <string name="pcs">pcs</string>
    <string name="gram">gram</string>
    <string name="add_to_diary">Tambahkan</string>
    <string name="unlink">Hapus</string>
    <string name="goal_with_activity">Tujuan dengan aktivitas</string>
    <string name="sum">Tambah</string>
    <string name="remaining">Tersisa</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="select_meal">Pilih jam makan</string>
    <string name="webview_menu2">Makanan yang Dilarang Saat Diet</string>
    <string name="webview_menu1">Makanan Penurun Berat Badan</string>
    <string name="webview_menu3">Makanan Sehat untuk Diet</string>
    <string name="webview_menu4">Makanan Penambah Berat Badan</string>
</resources>
