<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="20dp">

        <!-- Text -->

        <TextView
            android:id="@+id/textViewCategoriesDeleteMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:text="@string/are_you_sure_you_want_to_delete" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_signup"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/buttonConfirmDelete"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_red"
                    android:text="@string/delete" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</ScrollView>