<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorAppBackground">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="18dp">


        <!-- Status -->
        <TextView
            android:id="@+id/textViewGoalCurrentStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/colorBlack"
            android:paddingLeft="10dp"
            android:text="@string/status"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:padding="15dp">

            <!-- Current weight -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalCurrentWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/weight" />

                <TextView
                    android:id="@+id/textViewGoalCurrentWeightNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_marginLeft="6dp"
                    android:text="@string/kg" />

            </TableRow>
            <!-- //Current weight -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalTargetWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/target_weight" />

                <TextView
                    android:id="@+id/textViewGoalCurrentTargetWeightNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_marginLeft="6dp"
                    android:text="@string/kg" />

            </TableRow>
            <!-- Method -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/method" />

                <TextView
                    android:id="@+id/textViewGoalMethodText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_marginLeft="6dp"
                    android:text="Lose 0.5 kg week" />

            </TableRow>
            <!-- //Method -->

            <!-- Activity level -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/activity" />

                <TextView
                    android:id="@+id/textViewActivityLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_marginLeft="6dp"
                    android:text="@string/activity_level" />

            </TableRow>
            <!-- //Activity level -->
        </TableLayout>
        <!-- //Status -->
        <!-- Numbers -->
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:stretchColumns="1">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/textViewGoalNumbers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/numbers"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"/>
                <CheckBox
                    android:id="@+id/checkBoxGoalToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="12dp"
                    android:layout_gravity="right|center_vertical"
                    android:text="@string/advanced" />
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle"
            android:padding="10dp">
            <TextView
                android:id="@+id/textViewGoalNumbersIfYouWantToLooseWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/if_you_want_to_loose_weight"
                android:textSize="16sp"/>
            <TableRow
                android:id="@+id/textViewGoalMethodRowA"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank" />

                <TextView
                    android:id="@+id/textViewGoalHeadcellEnergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/energy" />

                <TextView
                    android:id="@+id/textViewGoalHeadcellProteins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/proteins" />

                <TextView
                    android:id="@+id/textViewGoalHeadcellCarbs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/carbs" />

                <TextView
                    android:id="@+id/textViewGoalHeadcellFat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/fat" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalMethodDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/without_activity" />

                <TextView
                    android:id="@+id/textViewGoalEnergyDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/energy" />

                <TextView
                    android:id="@+id/textViewGoalProteinsDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/proteins" />

                <TextView
                    android:id="@+id/textViewGoalCarbsDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/carbs" />

                <TextView
                    android:id="@+id/textViewGoalFatDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/fat" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalMethodWithActivityAndDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/with_activity_" />

                <TextView
                    android:id="@+id/textViewGoalEnergyWithActivityAndDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/energy" />

                <TextView
                    android:id="@+id/textViewGoalProteinsWithActivityAndDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/proteins" />

                <TextView
                    android:id="@+id/textViewGoalCarbsWithActivityAndDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/carbs" />

                <TextView
                    android:id="@+id/textViewGoalFatWithActivityAndDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/fat" />

            </TableRow>
            <!-- //With activity -->
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle"
            android:padding="10dp">
            <TextView
                android:id="@+id/textViewGoalNumbersIfYouWantToKeepYourWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/if_you_want_to_keep_your_weight"
                android:textSize="16sp"/>
            <TableRow
                android:id="@+id/textViewGoalMethodRowB"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalMethodB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/blank" />

                <TextView
                    android:id="@+id/textViewGoalHeadcellEnergyB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/energy" />

                <TextView
                    android:id="@+id/textViewGoalHeadcellProteinsB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/proteins" />

                <TextView
                    android:id="@+id/textViewGoalHeadcellCarbsB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/carbs" />

                <TextView
                    android:id="@+id/textViewGoalHeadcellFatB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/fat" />

            </TableRow>
            <!-- //Headcell -->
            <!-- BMR -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalMethodBMR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/without_activity" />

                <TextView
                    android:id="@+id/textViewGoalEnergyBMR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/energy" />

                <TextView
                    android:id="@+id/textViewGoalProteinsBMR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/proteins" />

                <TextView
                    android:id="@+id/textViewGoalCarbsBMR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/carbs" />

                <TextView
                    android:id="@+id/textViewGoalFatBMR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/fat" />

            </TableRow>
            <!-- //BMR -->



            <!-- with activity -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewGoalMethodWithActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/with_activity_" />

                <TextView
                    android:id="@+id/textViewGoalEnergyWithActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/energy" />

                <TextView
                    android:id="@+id/textViewGoalProteinsWithActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/proteins" />

                <TextView
                    android:id="@+id/textViewGoalCarbsWithActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/carbs" />

                <TextView
                    android:id="@+id/textViewGoalFatWithActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="@string/fat" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>